# Experiment-Audio

./: .gitignore  .gitmodules  README.md
20210204/: main.cpp
4-input-devices/: AudioProbe.cmake  AudioProbe.cpp  CMakeLists.txt  Recorder.h  main.cpp
AEC/: READEME.md
AEC-WIN/: README.md
AEC-WIN/20210730/: main.cpp  run.py  studio-capture-setting-avoid-clipping.studio
AEC-WIN/MEMS_921/: README.md  Recorder.h  main.cpp  run.py
AEC-WIN/base_code/: Recorder.h  main.cpp
AEC/20210227/: CMakeLists.txt  README.md  main.cpp
AEC/Laptop_MEMS_921/: main.cpp
AEC/Laptop_MEMS_921_2/: main.cpp
AEC/Laptop_MEMS_921_3/: README.md  Recorder.h  main.cpp  main.cpp~
AEC/Laptop_MEMS_921_924/: README.md  main.cpp  target_list.txt
AEC/Laptop_MEMS_921_dump_studio/: main.cpp  target_list.txt
AEC/Laptop_MEMS_921_fix/: README.md  main.cpp
AEC/MEMS_921/: README.md  main.cpp
AEC/Monitor_MEMS_921_dump/: README.md  main.cpp
AEC/SamsungMonitor_MEMS/: README.md  main.cpp
DS20921-EVK/: CMakeLists.txt  README.md  Recorder.h  main.cpp
DS20921-EVK/BothPort/: README.md
DS20921-EVK/BothPorts/: README.md  RecorderCX20921.h  RecorderCX20921FW.h  main.cpp
DS20921-EVK/Firmware/: README.md  (+2 more)
DS20924/: CMakeLists.txt  DS20924FW.h  README.md  main.cpp
HINT/: HINT.py  HINT_onfly_WIP.py  README.md
MEMS/: CMakeLists.txt  Recorder.h  main.cpp
NoiseReductionCalculation/: README.md  evaluate_NR.py  parser.py  requirements.txt  run.py
SNUH/: CMakeLists.txt  README.md  Recorder.h  main.cpp
cmake/: AudioProbe.cmake
glasses/: CMakeLists.txt  README.md  WER.ps1  WER.py  main.cpp  metric.py
glasses/label_t/: label_t01.txt  label_t02.txt  label_t03.txt  label_t04.txt  label_t05.txt  label_t06.txt  label_t07.txt  label_t08.txt  label_t09.txt  label_t10.txt  label_t11.txt  label_t12.txt  label_t13.txt  label_t14.txt  label_t15.txt  label_t16.txt  label_t17.txt  label_t18.txt  label_t19.txt
glasses/label_t_s/: t01_s01.txt  t01_s02.txt  t01_s03.txt  t01_s04.txt  t01_s05.txt  t01_s06.txt  t01_s07.txt  t01_s08.txt  t01_s09.txt  t01_s10.txt  t01_s11.txt  t01_s12.txt  t01_s13.txt  t01_s14.txt  t01_s15.txt  t01_s16.txt  t01_s17.txt  t01_s18.txt  t01_s19.txt  t01_s20.txt  t01_s21.txt  t01_s22.txt  t01_s23.txt  t01_s24.txt  t01_s25.txt  t01_s26.txt  t01_s27.txt  t01_s28.txt  t01_s29.txt  t01_s30.txt  t01_s31.txt  t01_s32.txt  t01_s33.txt  t01_s34.txt  t01_s35.txt  t01_s36.txt  t01_s37.txt  t01_s38.txt  t01_s39.txt  t01_s40.txt  (+889 more)
preprocess/: synthesize.py  synthesize.sh
python_player/: README.md  player.py  run.py
src/: Recorder.h
(+27 files in other folders)
